chore: WAL working

--- a/setup.cfg
+++ b/setup.cfg
@@ -16,6 +16,8 @@ universal = 1
 
 [flake8]
 exclude = docs
+max-line-length = 99
+ignore = E203
 
 [aliases]
 # Define setup.py command aliases here
@@ -23,4 +25,4 @@ test = pytest
 
 [tool:pytest]
 collect_ignore = ['setup.py']
-
+addopts = --cov=soonerdb
