chore: SSTables working

--- a/setup.cfg
+++ b/setup.cfg
@@ -25,4 +25,4 @@ test = pytest
 
 [tool:pytest]
 collect_ignore = ['setup.py']
-addopts = --cov=soonerdb
+addopts = --cov=soonerdb --cov-report term-missing
